# uefi-bootmgr

./: .gitignore  Cargo.toml  meson.build  net.boothwhack.UEFIBootMgr.yaml
efivar/: Cargo.toml
efivar/src/: efiboot.rs  efidevicepath.rs  efiloadoption.rs  efivar.rs  lib.rs
efivar/src/backend/: efivarfs.rs  mod.rs
efivar/src/test/: Boot0001-8be4df61-93ca-11d2-aa0d-00e098032b8c
src/: efiboot.rs  efidevicepath.rs  efiloadoption.rs  efivars.rs  main.rs  meson.build
uefi-bootmgr-gnome/: Cargo.toml  meson.build
uefi-bootmgr-gnome/src/: main.rs
uefi-bootmgr-gnome/src/ui/: app.rs
