[package]
name = "uefi-bootmgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { package = "libadwaita", version = "0.4" }
bytemuck = { version = "1.13", features = ["derive"] }
byteorder = "1.4"
enumflags2 = "0.7"
env_logger = "0.10"
futures = "0.3"
gio = "0.17"
log = "0.4"
num_enum = "0.6"
regex = "1.8"
thiserror = "1.0"
uuid = "1.4"
