[package]
name = "uefi-bootmgr-gnome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { package = "libadwaita", version = "0.4" }
efivar = { path = "../efivar" }
env_logger = "0.10"
futures = "0.3"
log = "0.4"
